--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+/* @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
+.font-satisfy {
+  font-family: 'Satisfy', sans-serif;
+} */
