--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -7,6 +7,11 @@
   width: 210px;
   margin-right: 10px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
+.font-satisfy {
+  font-family: 'Satisfy', sans-serif;
+}
 
 
 /* .grid-container { */
@@ -14,9 +19,6 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr); */
 /* } */
-
-
-
 
 /* shimmer ui */
 
