--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -28,7 +28,7 @@
   align-items: center;
   justify-content: center;
 }
-.shimmer-header{
+/* .shimmer-header{ */
 
   /* width: 100vw;
   height:96px ;
@@ -36,13 +36,13 @@
   /* background: linear-gradient(to right, #f6f7f8 0%, #eaebed 50%, #f6f7f8 100%); */
   /* background-image: linear-gradient(to right, #FB923C, #EF4444); */
   
-}
+/* } */
 
 .shimmer-body{
   /* background-color: red; */
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4 columns */
-  grid-template-rows: repeat(3, 500px); /* 3 rows */
+  grid-template-columns: repeat(3, 1fr); /* 4 columns */
+  grid-template-rows: repeat(1, 500px); /* 3 rows */
 }
 
 .shimmer{
